# slicec-old

./: .gitignore  Cargo.toml  ERRORS.txt
slicec/: Cargo.toml
slicec-cs/: Cargo.toml
slicec-cs/src/: cs_options.rs  cs_util.rs  main.rs
slicec/src/: ast.rs  grammar.rs  options.rs  parser.rs  patchers.rs  slice.pest  util.rs  visitor.rs
src/: ast.rs  code_gen_util.rs  error.rs  lib.rs  main.rs  ptr_visitor.rs  slice_file.rs  test_helpers.rs  util.rs  visitor.rs
src/ast/: mod.rs
src/ast/patchers/: comment_link_patcher.rs  encoding_patcher.rs  type_ref_patcher.rs
src/diagnostics/: diagnostic_reporter.rs  errors.rs  mod.rs  warnings.rs
src/grammar/: comments.rs  mod.rs  slice.rs  traits.rs  util.rs  wrappers.rs
src/grammar/elements/: enumerator.rs  field.rs  module.rs  operation.rs  parameter.rs
src/parser/: encoding_patcher.rs  mod.rs  parent_patcher.rs  slice.pest  slice.rs  type_patcher.rs
src/parsers/: mod.rs
src/parsers/comments/: mod.rs  parser.rs
src/parsers/preprocessor/: grammar.lalrpop  lexer.rs  mod.rs  tokens.rs
src/parsers/slice/: grammar.lalrpop  grammar.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
src/utils/: file_util.rs  string_util.rs
src/validators/: attributes.rs  comments.rs  cycle_detection.rs  dictionary.rs  enum.rs  enums.rs  identifiers.rs  miscellaneous.rs  mod.rs  operations.rs  type_alias.rs  type_ref.rs
tests/: attribute_tests.rs  comment_tests.rs  diagnostic_output_tests.rs
tests/enums/: container.rs  encoding.rs
