[package]
name = "slicec-cs"
version = "0.1.0"
authors = ["ZeroC Inc."]
description = """
The Slice parser and other core components of Slice compilers.
"""
keywords = ["slice", "ice", "icerpc"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
slicec = { path = "../slicec", version = "0.1.0" }
structopt = "0.3.13"

[[bin]]
name = "slicec-cs"
path = "src/main.rs"
